# zmv

./: CMakeLists.txt  README.md  imgui.ini
include/zmv/: camera.h  mesh.h  model.h  renderer.h  shader.h  texture.h
model/: nilou.mtl
shaders/: diffuse.frag  normal.frag  position.frag  shader.vert  specular.frag
src/: zmv.cpp
